<resources>
    <string name="app_name">Collabme</string>
    <string name="create_post">Create post</string>
    <string name="web_client_id">39101350371-gpoo1j5m3l972tloq1dov43ckd8s11f3.apps.googleusercontent.com</string>
    <string name="about_me">An Android Developer is a Software Developer who specializes in designing applications for the Android marketplace. The Android marketplace is the direct competitor to Apple’s app store. This means most of an Android Developer’s job revolves around creating the apps we use on our smartphones and tablets. Android Developers can either work in-house for a large organization, or they can be employed by an App Development agency.</string>
    <string name="large_text" formatted="false">Google LLC is an American multinational technology company that specializes
        in Internet-related services and products, which include online advertising technologies, a search
        engine, cloud computing, software, and hardware. It is considered one of the Big Five companies in
        the American information technology industry, along with Amazon, Facebook, Apple, and Microsoft.
        Google was founded on September 4, 1998, by Larry Page and Sergey Brin while they were Ph.D. students
        at Stanford University in California. Together they own about 14% of its publicly-listed shares and
        control 56% of the stockholder voting power through super-voting stock. The company went public via
        an initial public offering (IPO) in 2004. In 2015, Google was reorganized as a wholly-owned subsidiary
        of Alphabet Inc.. Google is Alphabet\'s largest subsidiary and is a holding company for Alphabet\'s
        Internet properties and interests. Sundar Pichai was appointed CEO of Google on October 24, 2015,
        replacing Larry Page, who became the CEO of Alphabet. On December 3, 2019, Pichai also became the
        CEO of Alphabet. In 2021, the Alphabet Workers Union was founded, mainly composed of Google employees.
        The company\'s rapid growth since incorporation has included products, acquisitions, and partnerships
        beyond Google\'s core search engine, (Google Search). It offers services designed for work and
        productivity (Google Docs, Google Sheets, and Google Slides), email (Gmail), scheduling and time
        management (Google Calendar), cloud storage (Google Drive), instant messaging and video chat
        (Google Duo, Google Chat, and Google Meet), language translation (Google Translate), mapping and
        navigation (Google Maps, Waze, Google Earth, and Street View), podcast hosting (Google Podcasts),
        video sharing (YouTube), blog publishing (Blogger), note-taking (Google Keep and Jamboard), and photo
        organizing and editing (Google Photos). The company leads the development of the Android mobile
        operating system, the Google Chrome web browser, and Chrome OS (a lightweight, proprietary operating
        system based on the free and open-source Chromium OS operating system). Google has moved increasingly
        into hardware; from 2010 to 2015, it partnered with major electronics manufacturers in the production
        of its Google Nexus devices, and it released multiple hardware products in 2016, including the Google
        Pixel line of smartphones, Google Home smart speaker, Google Wifi mesh wireless router. Google has also
        experimented with becoming an Internet carrier (Google Fiber and Google Fi).Google.com is the most
        visited website worldwide. Several other Google-owned websites also are on the list of most popular
        websites, including YouTube and Blogger.[15] On the list of most valuable brands, Google is ranked
        second by Forbes[16] and fourth by Interbrand.[17] It has received significant criticism involving
        issues such as privacy concerns, tax avoidance, censorship, search neutrality, antitrust and abuse
        of its monopoly position.
    </string>
    <string name="generic_image_desc">container for full screen image</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="no_messages">No messages yet. Be the first one to send a message …</string>
    <string name="empty_messages_greet">Be the first one to send a message. Say \"hi\" to other collaborators.</string>
    <string name="empty_post_requests_greet">No post requests at the moment. When someone requests you to join in your post, they appear here.</string>
    <string name="empty_post_invites_greet">No post invites at the moment. When someone invites you to join in their post, they appear here.</string>
    <string name="empty_comments_greet">No comments yet. Be the first one to comment.</string>
    <string name="replying_to">Replying to</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>
    <string name="update_interests">Update interests</string>
    <string name="revoke">Revoke</string>
    <string name="undo">Undo</string>
    <string name="join">Join</string>
    <string name="join_post">Join post</string>
    <string name="email_verification_message">Verification email sent. Check your mail.</string>
    <string name="empty_chat_list_greet">No chats found. Collaborate on posts or create your own post to create a collaboration.</string>
    <string name="skip">Skip</string>
    <string name="skip_u"><u>Skip</u></string>
    <string name="skip_cap_u"><u>SKIP</u></string>
    <string name="login">Login</string>
    <string name="search_for_posts">Search for posts</string>
    <string name="empty_collaborations_greet">You haven\'t collaborated with anyone. Your collaborations appear here.</string>
    <string name="profile_upload_loading_text">Updating profile. Please wait …</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit profile</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>
    <string name="empty_user_posts_greet">Create new post so that other people can see your work and collaborate</string>
    <string name="empty_saved_posts_greet">You haven\'t saved any posts yet. Save post that you might want to visit later.</string>
    <string name="create_post_loading">Creating post. Please wait …</string>
    <string name="update_post_loading">Updating post. Please wait …</string>
    <string name="add_location">Add Location</string>
    <string name="empty_notifications_greet">No notifications at the moment. Your notifications appear here. However notifications like post request and invites appear separately.</string>
    <string name="common_error_text">Something went wrong :(</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="get_started">Get started</string>
    <string name="create_account_msg">Create an account to connect and collaborate with others to create awesome things</string>
    <string name="create">Create</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="creating_your_post">Creating your post …</string>
    <string name="create_post_info">1. A post can have images and information regarding what you\'re creating.\n2.Add links to your post (Ex: links to source files, youtube videos, reference, etc.). \n3. Add tags to your post to make your post searchable by other users and also it is a good practice to know the field and info related to your post.</string>
    <string name="username">Username</string>
    <string name="tag">Tag</string>
    <string name="about">About</string>
    <string name="add_interest">Add Interest</string>
    <string name="feedback_info">Let us know what we can do to improve our app experience even more. Report if there are any bugs or if there are any feature requests.</string>
    <string name="give_feedback">Give feedback</string>
    <string name="write_your_feedback">Write your feedback …</string>
    <string name="forgot_password_info">Enter your email. We will send you a link to reset your password.</string>
    <string name="sign_in_info">Sign in to get the latest posts people are working on, participate and learn.</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account_link">Don\'t have an account?\nCreate new account</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">Forgot password</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="update_profile_image">Update profile image</string>
    <string name="reason">Reason</string>
    <string name="report_info">Your reason must be valid and informative. Add screenshots to support your claim (optional).</string>
    <string name="report">Report</string>
    <string name="add_screenshots">Add screenshots</string>
    <string name="name_of_context">Name of Context</string>
    <string name="no_posts_found">No posts found</string>
    <string name="no_accounts_found">No accounts found</string>
    <string name="update_password_header">Enter old password to change password …</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="cancel">Cancel</string>
    <string name="upgrade_plan">Upgrade plan</string>
    <string name="remove_subscription">Remove subscription</string>
    <string name="empty_subscriptions">No active subscription</string>
    <string name="empty_subscriptions_desc">You have no active subscriptions. To remove ads and limitations subscribe to a premium plan.</string>
    <string name="base_subscription">Base Subscription</string>
    <string name="base_subscription_desc">(To upgrade to Premium Subscription, the previous subscription must be ended. Once started, it will finish after it\'s period completes regardless if you choose to end it now. Subscriptions can be cancelled in play store.)</string>
    <string name="premium_subscriptions">Premium subscription</string>
    <string name="premium_subscription_desc">(To downgrade to Base Subscription, the previous subscription must be ended. Once started, it will finish after it\'s period completes regardless if you choose to end it now. Subscriptions can be cancelled in play store.)</string>
    <string name="sample_likes_comment_text">12 Likes • 4 Comments • 5 Contributors</string>
    <string name="sample_location_text">Gumoria pathar, Sonapur</string>
    <string name="sample_time_text">12 hours ago</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="add_more_images">Add more images</string>
    <string name="invite">Invite</string>
    <string name="archive">Archive</string>
    <string name="un_archive">Un-archive</string>
    <string name="archive_summary">This post has been archived. It can only be seen by you. To make it public, un-archive it again.</string>
    <string name="write_something_here">Write something here …</string>
    <string name="sample_name">Jamid Deka</string>
    <string name="sample_tag">Android Developer</string>
    <string name="like_the_user">Like the user</string>
    <string name="done">Done</string>
</resources>