<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/context_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/report_reason_text"
        app:layout_constraintEnd_toStartOf="@+id/context_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:placeholderImage="@color/lightest_grey"
        app:roundAsCircle="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/report_reason_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/context_img">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reason" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/report_info"
        app:layout_constraintBottom_toTopOf="@+id/report_add_screenshots"
        app:layout_constraintEnd_toEndOf="@+id/report_reason_text"
        app:layout_constraintStart_toStartOf="@+id/report_reason_text"
        app:layout_constraintTop_toBottomOf="@+id/report_reason_text" />

    <Button
        android:id="@+id/report_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        app:layout_constraintBottom_toBottomOf="@+id/report_add_screenshots"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/report_add_screenshots"
        app:layout_constraintTop_toTopOf="@+id/report_add_screenshots" />

    <Button
        android:id="@+id/report_add_screenshots"
        style="@style/AppTheme.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_screenshots"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/report_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/context_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name_of_context"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/context_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/context_img"
        app:layout_constraintTop_toTopOf="@+id/context_img"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/report_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="12:45 pm Sunday"
        app:layout_constraintStart_toStartOf="@+id/context_name"
        app:layout_constraintTop_toBottomOf="@+id/context_name" />
</androidx.constraintlayout.widget.ConstraintLayout>